# SD

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  create_sample_data.py  create_superuser.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/: __init__.py
apps/accounts/: admin.py  apps.py  backends.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/assessments/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/certifications/: __init__.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/core/: __init__.py  apps.py  exceptions.py  middleware.py  models.py  validators.py
apps/courses/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/gamification/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
apps/integrations/: admin.py  models.py  urls.py
apps/learning_paths/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/lessons_learned/: __init__.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/notifications/: admin.py  models.py  services.py  urls.py  views.py
apps/occupational_profiles/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py
apps/preop_talks/: __init__.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/reports/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/sync/: admin.py  apps.py  models.py  urls.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  cloudrun.py  dev.py  local.py  production.py  staging.py  test.py
docs/: ALINEACION_ESTANDAR_INDUNNOVA.md  API.md  ARCHITECTURE.md  ARQUITECTURA_INFRAESTRUCTURA.md  ARQUITECTURA_INFRAESTRUCTURA_GCP.md  Ajustes_Aplicativo_Formacion_Intercolombia.md  DEPLOYMENT.md  FT-HSEQ-120_PC_V06_MANTENIMIENTO_BANADIA.xlsx  FT-HSEQ-120_PC_V06_MANTENIMIENTO_ESSA_OBRAS.xlsx  FT-HSEQ-120_PC_V06_MANTENIMIENTO_ORIENTE MANT.xlsx  LISTADO DE PERSONAL.xlsx  PLAN_DE_DESARROLLO.md  manual_administrador.html  manual_trabajador.html
requirements/: base.txt  local.txt  production.txt  test.txt
templates/: home.html
templates/accounts/: base_auth.html  bulk_upload.html  change_password.html  dashboard.html  enroll_totp.html  lockout.html  login.html  logout_confirm.html  password_reset.html  password_reset_confirm.html  password_reset_invalid.html  profile.html  profile_edit.html  setup_2fa.html  user_create.html  (+6 more)
(+260 files in other folders)
